@startuml Catalog Management - Simplified ERD

' Simplified version focusing on key relationships

skinparam linetype ortho
skinparam backgroundColor #FEFEFE

' ==================== ENTITIES ====================

entity "Category" as cat {
  * categoryId : String
  --
  name : String
  slug : String
  parentId : String
  level : Integer
  displayOrder : Integer
  productCount : Long
}

entity "Collection" as col {
  * collectionId : String
  --
  name : String
  type : CollectionType
  startDate : DateTime
  endDate : DateTime
  productCount : Long
}

entity "CatalogItem" as item {
  * catalogItemId : String
  --
  * productId : String
  featured : Boolean
  displayOrder : Integer
  tags : List<String>
}

entity "ProductCategoryMapping" as pcm {
  * mappingId : Long
  --
  productId : String
  categoryId : String
  isPrimary : Boolean
}

entity "CollectionProductMapping" as cpm {
  * mappingId : Long
  --
  collectionId : String
  productId : String
  displayOrder : Integer
}

rectangle "Product Management\n(External Module)" as pm #FFE4E1 {
  entity "Product" as prod {
    * productId : String
    --
    name : String
    price : Decimal
    artisanId : String
  }
}

' ==================== RELATIONSHIPS ====================

' Category hierarchy
cat ||--o{ cat : "parent-child"

' Product to CatalogItem (1:1)
prod ||--|| item : "1:1"

' Product-Category (Many-to-Many)
prod ||--o{ pcm
cat ||--o{ pcm

' Collection-Product (Many-to-Many)
col ||--o{ cpm
prod ||--o{ cpm

' ==================== SAMPLE DATA ====================

note as sample
  **Sample Data Flow:**
  
  1. Product "Silver Necklace" (PROD-001)
     ↓
  2. CatalogItem (CITEM-001)
     - productId: "PROD-001"
     - featured: true
     - tags: ["trending", "bestseller"]
     ↓
  3. Categories (via ProductCategoryMapping):
     - Jewelry > Necklaces (primary)
     - Jewelry > Necklaces > Silver Necklaces
     ↓
  4. Collections (via CollectionProductMapping):
     - Holiday Gifts 2024
     - Editor's Picks
     - Sarah's Jewelry
end note

@enduml
